<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo4"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/regIntro"
            android:justificationMode="inter_word"
            android:paddingVertical="20dp"/>
        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"/>
        <EditText
            android:id="@+id/userLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastName"/>
        <EditText
            android:id="@+id/nit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/NIT"/>
        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/regPhone"/>
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/regPassword"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:paddingVertical="10dp"
            android:text="@string/regOutro"
            android:textColor="#aeaeae" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/regPrivacy"
            android:clickable="true"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:backgroundTint="@color/cyan_ligth"
        android:textColor="@color/black"
        android:hint="@string/register"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="15dip"
        android:paddingRight="15dip" />

    <TextView android:id="@+id/link_to_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:layout_marginBottom="40dip"
        android:text="Ya tienes cuenta? Accede"
        android:gravity="center"
        android:textSize="15dip"
        android:textColor="@color/cyan_dark"/>
</LinearLayout>